--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
       <p id="message-text"></p>
     </div>
     <div class="restart-container">
-      <button class="restart-button" disabled>Reiniciar</button>
+      <button class="restart-button" id="restart-button" disabled>Reiniciar</button>
     </div>
     <script src="./bundle.js"></script>
   </body>
