--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Platzi Wordle</title>
     <link rel="stylesheet" href="./styles.css" />
+    <title>PlatziWordle</title>
   </head>
   <body>
-    <h1 class="web-title">Platzi Wordle</h1>
+    <h1 class="web-title">PlatziWordle</h1>
     <div class="letters-container">
       <div class="letter-row">
         <div class="letter"></div>
@@ -53,10 +54,10 @@
       </div>
     </div>
     <div class="message-container">
-      <p id="message-text"></p>
+      <p class="message-text" id="message-text"></p>
     </div>
     <div class="restart-container">
-      <button class="restart-button" id="restart-button" disabled>Reiniciar</button>
+      <button class="restart-button" id="restart-button">Reiniciar</button>
     </div>
     <script src="./bundle.js"></script>
   </body>
